# DBMS_LAB

./: .gitignore  ca.pem  main.py  normalize.py  pyproject.toml  requirements.txt  schema.py
artifact/: BRAND.csv  CATEGORY.csv  CUSTOMER.csv  INVOICE.csv  INVOICE_ITEM.csv  PAYMENT.csv  PRODUCT.csv  STORE.csv
normalized_superstore_data/: categories.csv  locations.csv  order_details.csv  orders.csv  products.csv  sub_categories.csv
